fixed responsive bugs and overflow-x preventing animations

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,14 @@
 @tailwind utilities;
 
 @layer base {
+
+  #root {
+    overflow-x: hidden;
+    @apply scroll-smooth h-[100%] w-[100%] overflow-x-hidden m-0 p-0 scrollbar-thin;
+  }
+  
   html {
-    @apply scroll-smooth overflow-x-hidden scrollbar-thin;
+    @apply scroll-smooth h-[100%] w-[100%] overflow-x-hidden m-0 p-0 scrollbar-thin;
   }
 
   body {
